--- a/src/ui/bpmn-styles.css
+++ b/src/ui/bpmn-styles.css
@@ -494,7 +494,7 @@
 
 /* bpmn-js injects content here */
 .panel-content {
-    height: calc(100% - 40px);
+    height: 100%;
     overflow: auto;
 }
 
@@ -1413,6 +1413,6 @@
 /* Inner scroll */
 .panel-content,
 .validation-content {
-    max-height: calc(100vh - 80px);
+    height: 100%;
     overflow: auto;
 }
